--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
 h1, h2, h5 {
     text-align: center;
 }
+
+img {
+    width: 400px;
+    height: auto;
+    display: block;
+    margin: auto;
+    border: 3px solid black;
+    border-radius: 10px;
+}
+
+hr {
+    width: 50%;
+}
